[package]
name = "honeydew"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["vulkan"]
metal = ["gfx-backend-metal"]
# gl = ["gfx-backend-gl"]
# dx11 = ["gfx-backend-dx11"]
# dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# env_logger = "0.8"
# glsl-to-spirv = "0.1.4"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2"
# console_error_panic_hook = "0.1.6"
# console_log = "0.1.2"

# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# version = "0.3.6"
# features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies]
fastrand = "1.4.0"
gfx_2020 = { git = "https://github.com/sirkibsirkib/gfx_2020" }
ordered-float = "2.1.1"
bincode = "1.3.2"
ron = "0.6.4"
serde = { version = "1.0.63", features = ["derive"] }

gfx-backend-vulkan = { version = "0.6.5", optional = true }
# path = "../src/backend/vulkan"
# version = "0.7"
# optional = true

# [target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
# path = "../src/backend/gl"
# version = "0.7"
# features = ["cross"]
# optional = true

# [target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
# path = "../src/backend/gl"
# version = "0.7"
# optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
gfx-backend-metal = { version = "0.6.5", optional = true }
# path = "../src/backend/metal"
# features = ["cross"]
# version = "0.7"
# optional = true

# [target.'cfg(windows)'.dependencies.gfx-backend-dx11]
# path = "../src/backend/dx11"
# version = "0.7"
# optional = true

# [target.'cfg(windows)'.dependencies.gfx-backend-dx12]
# path = "../src/backend/dx12"
# version = "0.7"
# optional = true

# [target.'cfg(windows)'.dependencies]
# gfx_backend = {package = "gfx-backend-vulkan", version = "0.6.5" }

# [target.'cfg(macos)'.dependencies]
# gfx_backend = {package = "gfx-backend-metal", version = "0.6.5" }


# gfx-backend-dx12 = "0.6.13"
# [features]
# backend_metal = 