[package]
name = "honeydew"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]
gl = ["gfx-backend-gl"]

[dependencies]
fastrand = "1.4.0"
gfx_2020 = { git = "https://github.com/sirkibsirkib/gfx_2020" }
ordered-float = "2.1.1"
bincode = "1.3.2"
ron = "0.6.4"
serde = { version = "1.0.63", features = ["derive"] }

gfx-backend-vulkan = { version = "0.6.5", optional = true }
gfx-backend-gl = { version = "0.6.1", optional = true }

# [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
gfx-backend-metal = { version = "0.6.5", optional = true }


# [target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies]

# [target.'cfg(all(target_arch = "wasm32"))'.dependencies]
# gfx-backend-gl = { version = "0.6.1", optional = true }