[package]
name = "honeydew"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

[features]
default = ["vulkan"]
metal = ["gfx-backend-metal"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
gl = ["gfx-backend-gl"]

[dependencies]
fastrand = "1.4.0"
gfx_2020 = { git = "https://github.com/sirkibsirkib/gfx_2020", features = ["serde"] }
# gfx_2020 = { path = "../gfx_2020", features = ["serde"] }
ordered-float = "2.1.1"
bincode = "1.3.2"
ron = "0.6.4"
serde = { version = "1.0.63", features = ["derive"] }
fnv = "1.0.7"

gfx-backend-vulkan = { version = "0.6", optional = true }
gfx-backend-dx11 = { version = "0.6", optional = true }
gfx-backend-dx12 = { version = "0.6", optional = true }
gfx-backend-gl = { version = "0.6", optional = true }
gfx-backend-metal = { version = "0.6", optional = true }
